feat: API auth
