# api/src/domain/ports/auth.service.ts
@@ -1,0 +1,6 @@
+import { UserToken } from "../models/user";
+
+export interface AuthService {
+  generateToken(payload: UserToken): string;
+  comparePassword(password: string, passwordHashed: string): Promise<boolean>;
+}
